infra/cdk/template.yaml
Description: Huntaze OnlyFans Infrastructure (us-east-1)
Resources:
  HuntazeVpc5999C4FE:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: HuntazeOnlyFansStack/HuntazeVpc
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/Resource
  HuntazeVpcPublicSubnet1SubnetC8C2BC5A:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet1
      VpcId:
        Ref: HuntazeVpc5999C4FE
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet1/Subnet
  HuntazeVpcPublicSubnet1RouteTable02F52DC9:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet1
      VpcId:
        Ref: HuntazeVpc5999C4FE
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet1/RouteTable
  HuntazeVpcPublicSubnet1RouteTableAssociation37E492E9:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: HuntazeVpcPublicSubnet1RouteTable02F52DC9
      SubnetId:
        Ref: HuntazeVpcPublicSubnet1SubnetC8C2BC5A
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet1/RouteTableAssociation
  HuntazeVpcPublicSubnet1DefaultRouteBA7B5D0E:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: HuntazeVpcIGW25299BDF
      RouteTableId:
        Ref: HuntazeVpcPublicSubnet1RouteTable02F52DC9
    DependsOn:
      - HuntazeVpcVPCGW6D133DCD
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet1/DefaultRoute
  HuntazeVpcPublicSubnet1EIP1993EADD:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet1/EIP
  HuntazeVpcPublicSubnet1NATGatewayE13AFFF6:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - HuntazeVpcPublicSubnet1EIP1993EADD
          - AllocationId
      SubnetId:
        Ref: HuntazeVpcPublicSubnet1SubnetC8C2BC5A
      Tags:
        - Key: Name
          Value: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet1
    DependsOn:
      - HuntazeVpcPublicSubnet1DefaultRouteBA7B5D0E
      - HuntazeVpcPublicSubnet1RouteTableAssociation37E492E9
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet1/NATGateway
  HuntazeVpcPublicSubnet2Subnet06FE0FD1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet2
      VpcId:
        Ref: HuntazeVpc5999C4FE
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet2/Subnet
  HuntazeVpcPublicSubnet2RouteTableAF5A7468:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet2
      VpcId:
        Ref: HuntazeVpc5999C4FE
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet2/RouteTable
  HuntazeVpcPublicSubnet2RouteTableAssociation5DE92778:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: HuntazeVpcPublicSubnet2RouteTableAF5A7468
      SubnetId:
        Ref: HuntazeVpcPublicSubnet2Subnet06FE0FD1
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet2/RouteTableAssociation
  HuntazeVpcPublicSubnet2DefaultRoute92AA770F:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: HuntazeVpcIGW25299BDF
      RouteTableId:
        Ref: HuntazeVpcPublicSubnet2RouteTableAF5A7468
    DependsOn:
      - HuntazeVpcVPCGW6D133DCD
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PublicSubnet2/DefaultRoute
  HuntazeVpcPrivateSubnet1SubnetBCD5E219:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: HuntazeOnlyFansStack/HuntazeVpc/PrivateSubnet1
      VpcId:
        Ref: HuntazeVpc5999C4FE
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PrivateSubnet1/Subnet
  HuntazeVpcPrivateSubnet1RouteTableEA96BBE1:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: HuntazeOnlyFansStack/HuntazeVpc/PrivateSubnet1
      VpcId:
        Ref: HuntazeVpc5999C4FE
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PrivateSubnet1/RouteTable
  HuntazeVpcPrivateSubnet1RouteTableAssociationF553FCAF:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: HuntazeVpcPrivateSubnet1RouteTableEA96BBE1
      SubnetId:
        Ref: HuntazeVpcPrivateSubnet1SubnetBCD5E219
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PrivateSubnet1/RouteTableAssociation
  HuntazeVpcPrivateSubnet1DefaultRoute69661021:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: HuntazeVpcPublicSubnet1NATGatewayE13AFFF6
      RouteTableId:
        Ref: HuntazeVpcPrivateSubnet1RouteTableEA96BBE1
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PrivateSubnet1/DefaultRoute
  HuntazeVpcPrivateSubnet2Subnet81FE0BF9:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: HuntazeOnlyFansStack/HuntazeVpc/PrivateSubnet2
      VpcId:
        Ref: HuntazeVpc5999C4FE
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PrivateSubnet2/Subnet
  HuntazeVpcPrivateSubnet2RouteTable2E6EAD1D:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: HuntazeOnlyFansStack/HuntazeVpc/PrivateSubnet2
      VpcId:
        Ref: HuntazeVpc5999C4FE
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PrivateSubnet2/RouteTable
  HuntazeVpcPrivateSubnet2RouteTableAssociationA836F84C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: HuntazeVpcPrivateSubnet2RouteTable2E6EAD1D
      SubnetId:
        Ref: HuntazeVpcPrivateSubnet2Subnet81FE0BF9
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PrivateSubnet2/RouteTableAssociation
  HuntazeVpcPrivateSubnet2DefaultRouteF72BF510:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: HuntazeVpcPublicSubnet1NATGatewayE13AFFF6
      RouteTableId:
        Ref: HuntazeVpcPrivateSubnet2RouteTable2E6EAD1D
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/PrivateSubnet2/DefaultRoute
  HuntazeVpcIGW25299BDF:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: HuntazeOnlyFansStack/HuntazeVpc
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/IGW
  HuntazeVpcVPCGW6D133DCD:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: HuntazeVpcIGW25299BDF
      VpcId:
        Ref: HuntazeVpc5999C4FE
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/VPCGW
  HuntazeVpcRestrictDefaultSecurityGroupCustomResource02F90D3A:
    Type: Custom::VpcRestrictDefaultSG
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E
          - Arn
      DefaultSecurityGroupId:
        Fn::GetAtt:
          - HuntazeVpc5999C4FE
          - DefaultSecurityGroup
      Account: "317805897534"
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeVpc/RestrictDefaultSecurityGroupCustomResource/Default
  CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
      ManagedPolicyArns:
        - Fn::Sub: arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: Inline
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ec2:AuthorizeSecurityGroupIngress
                  - ec2:AuthorizeSecurityGroupEgress
                  - ec2:RevokeSecurityGroupIngress
                  - ec2:RevokeSecurityGroupEgress
                Resource:
                  - Fn::Join:
                      - ""
                      - - arn:aws:ec2:us-east-1:317805897534:security-group/
                        - Fn::GetAtt:
                            - HuntazeVpc5999C4FE
                            - DefaultSecurityGroup
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role
  CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket: cdk-hnb659fds-assets-317805897534-us-east-1
        S3Key: 7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip
      Timeout: 900
      MemorySize: 128
      Handler: __entrypoint__.handler
      Role:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
          - Arn
      Runtime: nodejs22.x
      Description: Lambda function for removing all inbound/outbound rules from the VPC default security group
    DependsOn:
      - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler
      aws:asset:path: asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200
      aws:asset:property: Code
  BrowserWorkerSGE9CD062C:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for OnlyFans browser worker
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: HuntazeVpc5999C4FE
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/BrowserWorkerSG/Resource
  HuntazeKmsKeyDAB810E1:
    Type: AWS::KMS::Key
    Properties:
      Description: KMS key for Huntaze OnlyFans data encryption
      EnableKeyRotation: true
      KeyPolicy:
        Statement:
          - Action: kms:*
            Effect: Allow
            Principal:
              AWS: arn:aws:iam::317805897534:root
            Resource: "*"
        Version: "2012-10-17"
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeKmsKey/Resource
  HuntazeKmsKeyAliasB5326435:
    Type: AWS::KMS::Alias
    Properties:
      AliasName: alias/huntaze/onlyfans
      TargetKeyId:
        Fn::GetAtt:
          - HuntazeKmsKeyDAB810E1
          - Arn
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeKmsKey/Alias/Resource
  HuntazeOfSessions101C32F9:
    Type: AWS::DynamoDB::Table
    Properties:
      AttributeDefinitions:
        - AttributeName: userId
          AttributeType: S
      BillingMode: PAY_PER_REQUEST
      KeySchema:
        - AttributeName: userId
          KeyType: HASH
      PointInTimeRecoverySpecification:
        PointInTimeRecoveryEnabled: true
      SSESpecification:
        KMSMasterKeyId:
          Fn::GetAtt:
            - HuntazeKmsKeyDAB810E1
            - Arn
        SSEEnabled: true
        SSEType: KMS
      TimeToLiveSpecification:
        AttributeName: expiresAt
        Enabled: true
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeOfSessions/Resource
  HuntazeOfThreadsC1B9D4EA:
    Type: AWS::DynamoDB::Table
    Properties:
      AttributeDefinitions:
        - AttributeName: userId
          AttributeType: S
        - AttributeName: fanId
          AttributeType: S
      BillingMode: PAY_PER_REQUEST
      KeySchema:
        - AttributeName: userId
          KeyType: HASH
        - AttributeName: fanId
          KeyType: RANGE
      PointInTimeRecoverySpecification:
        PointInTimeRecoveryEnabled: true
      SSESpecification:
        KMSMasterKeyId:
          Fn::GetAtt:
            - HuntazeKmsKeyDAB810E1
            - Arn
        SSEEnabled: true
        SSEType: KMS
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeOfThreads/Resource
  HuntazeOfMessages91547DBB:
    Type: AWS::DynamoDB::Table
    Properties:
      AttributeDefinitions:
        - AttributeName: taskId
          AttributeType: S
      BillingMode: PAY_PER_REQUEST
      KeySchema:
        - AttributeName: taskId
          KeyType: HASH
      SSESpecification:
        KMSMasterKeyId:
          Fn::GetAtt:
            - HuntazeKmsKeyDAB810E1
            - Arn
        SSEEnabled: true
        SSEType: KMS
      TimeToLiveSpecification:
        AttributeName: expiresAt
        Enabled: true
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeOfMessages/Resource
  OfCredentialsC496EF18:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: OnlyFans credentials
      GenerateSecretString:
        GenerateStringKey: sessionToken
        SecretStringTemplate: '{"email":"placeholder@example.com","password":"placeholder"}'
      Name: of/creds/huntaze
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/OfCredentials/Resource
  BrowserWorkerLogs87663EC0:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /huntaze/of/browser-worker
      RetentionInDays: 14
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/BrowserWorkerLogs/Resource
  HuntazeEcsCluster9B4373E6:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: huntaze-of-fargate
      ClusterSettings:
        - Name: containerInsights
          Value: enabled
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/HuntazeEcsCluster/Resource
  BrowserWorkerTaskRole93528FE8:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      Description: Role for browser worker task
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/BrowserWorkerTaskRole/Resource
  BrowserWorkerTaskRoleDefaultPolicy6D2E139A:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - kms:Decrypt
              - kms:DescribeKey
              - kms:Encrypt
              - kms:GenerateDataKey*
              - kms:ReEncrypt*
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - HuntazeKmsKeyDAB810E1
                - Arn
          - Action:
              - dynamodb:BatchGetItem
              - dynamodb:BatchWriteItem
              - dynamodb:ConditionCheckItem
              - dynamodb:DeleteItem
              - dynamodb:DescribeTable
              - dynamodb:GetItem
              - dynamodb:GetRecords
              - dynamodb:GetShardIterator
              - dynamodb:PutItem
              - dynamodb:Query
              - dynamodb:Scan
              - dynamodb:UpdateItem
            Effect: Allow
            Resource:
              - Fn::GetAtt:
                  - HuntazeOfMessages91547DBB
                  - Arn
              - Fn::GetAtt:
                  - HuntazeOfSessions101C32F9
                  - Arn
              - Fn::GetAtt:
                  - HuntazeOfThreadsC1B9D4EA
                  - Arn
              - Ref: AWS::NoValue
          - Action:
              - secretsmanager:DescribeSecret
              - secretsmanager:GetSecretValue
            Effect: Allow
            Resource:
              Ref: OfCredentialsC496EF18
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - BrowserWorkerLogs87663EC0
                - Arn
        Version: "2012-10-17"
      PolicyName: BrowserWorkerTaskRoleDefaultPolicy6D2E139A
      Roles:
        - Ref: BrowserWorkerTaskRole93528FE8
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/BrowserWorkerTaskRole/DefaultPolicy/Resource
  BrowserWorkerTask01044B0A:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Environment:
            - Name: NODE_ENV
              Value: production
            - Name: AWS_REGION
              Value: us-east-1
            - Name: OF_DDB_SESSIONS_TABLE
              Value:
                Ref: HuntazeOfSessions101C32F9
            - Name: OF_DDB_THREADS_TABLE
              Value:
                Ref: HuntazeOfThreadsC1B9D4EA
            - Name: OF_DDB_MESSAGES_TABLE
              Value:
                Ref: HuntazeOfMessages91547DBB
            - Name: OF_KMS_KEY_ID
              Value:
                Fn::GetAtt:
                  - HuntazeKmsKeyDAB810E1
                  - Arn
            - Name: OF_LOGIN_SECRET_NAME
              Value:
                Fn::Select:
                  - 0
                  - Fn::Split:
                      - "-"
                      - Fn::Select:
                          - 6
                          - Fn::Split:
                              - ":"
                              - Ref: OfCredentialsC496EF18
          Essential: true
          Image:
            Fn::Join:
              - ""
              - - 317805897534.dkr.ecr.us-east-1.
                - Ref: AWS::URLSuffix
                - /huntaze/of-browser-worker:main
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: BrowserWorkerLogs87663EC0
              awslogs-stream-prefix: of-browser
              awslogs-region: us-east-1
          Name: of-browser-worker
      Cpu: "2048"
      ExecutionRoleArn:
        Fn::GetAtt:
          - BrowserWorkerTaskExecutionRole51F82989
          - Arn
      Family: HuntazeOfStackBrowserWorkerTaskCED33274
      Memory: "8192"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - BrowserWorkerTaskRole93528FE8
          - Arn
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/BrowserWorkerTask/Resource
  BrowserWorkerTaskExecutionRole51F82989:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/BrowserWorkerTask/ExecutionRole/Resource
  BrowserWorkerTaskExecutionRoleDefaultPolicy0F449908:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:BatchGetImage
              - ecr:GetDownloadUrlForLayer
            Effect: Allow
            Resource: arn:aws:ecr:us-east-1:317805897534:repository/huntaze/of-browser-worker
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - BrowserWorkerLogs87663EC0
                - Arn
        Version: "2012-10-17"
      PolicyName: BrowserWorkerTaskExecutionRoleDefaultPolicy0F449908
      Roles:
        - Ref: BrowserWorkerTaskExecutionRole51F82989
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/BrowserWorkerTask/ExecutionRole/DefaultPolicy/Resource
  BrowserWorkerFailureAlarm9EE41D43:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: Alert if browser worker tasks fail
      AlarmName: huntaze-of-browser-worker-failure
      ComparisonOperator: GreaterThanOrEqualToThreshold
      Dimensions:
        - Name: ClusterName
          Value:
            Ref: HuntazeEcsCluster9B4373E6
      EvaluationPeriods: 2
      MetricName: TaskCount
      Namespace: ECS/ContainerInsights
      Period: 60
      Statistic: Average
      Threshold: 0
      TreatMissingData: notBreaching
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/BrowserWorkerFailureAlarm/Resource
  BrowserWorkerErrorRateAlarmCE02E1C9:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: Alert if browser worker error rate is high
      AlarmName: huntaze-of-browser-worker-error-rate
      ComparisonOperator: GreaterThanOrEqualToThreshold
      EvaluationPeriods: 1
      MetricName: BrowserTaskError
      Namespace: Huntaze/OnlyFans/BrowserWorker
      Period: 300
      Statistic: Sum
      Threshold: 10
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/BrowserWorkerErrorRateAlarm/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/22S3U7rMAzHn4X7LEDFC4xxQOggqDrELfJSU8zaeEqcTVPVd8dp2XqEzpV//jvxV1LYori2VxdwiAtXbxctbWy/FnBbo9J7j66w/dvOmdWHfytXpkybltw6bTxK1maqOAm+wqbFWZ+1ZYzsCITYnw9n+PNYZvMM8gCCBziaMtBecU786AWD8unA1MmPtxTt9bNDL2aNLgWS40PgtBt7+FcYzLaLtv+LY4Jsli1BzM4Ig6mPHjqudf7zFCMMJqILKLEDDw0G3c/o/5RQGkzLjSZ/4uZc/MSDQaehVZuijpEjJ7yH0EBeT9ze4Qd5Oi3nt8JegDyGWRsMQWf7iqc2R1uyPsw43ES5cLAV7jiScDjeQkTjWk71AcR92n7ZQuim+RWGwVQYOQWnKbVB7mZXK/w/VAbeU41hzK1PjKJfpyHf5DsvSXZJd+O5RvsVL/fFjb2x1xdfkW [...]
    Metadata:
      aws:cdk:path: HuntazeOnlyFansStack/CDKMetadata/Default
Outputs:
  ClusterArn:
    Description: ECS Cluster ARN for browser workers
    Value:
      Fn::GetAtt:
        - HuntazeEcsCluster9B4373E6
        - Arn
    Export:
      Name: HuntazeEcsClusterArn
  TaskDefinitionArn:
    Description: Task Definition ARN
    Value:
      Ref: BrowserWorkerTask01044B0A
    Export:
      Name: HuntazeBrowserWorkerTaskDef
  SessionsTableName:
    Description: DynamoDB Sessions Table
    Value:
      Ref: HuntazeOfSessions101C32F9
    Export:
      Name: HuntazeOfSessionsTable
  SubnetIds:
    Description: Subnet IDs for ECS tasks
    Value:
      Fn::Join:
        - ""
        - - Ref: HuntazeVpcPublicSubnet1SubnetC8C2BC5A
          - ","
          - Ref: HuntazeVpcPublicSubnet2Subnet06FE0FD1
    Export:
      Name: HuntazeEcsSubnets
  SecurityGroupId:
    Description: Security Group ID for ECS tasks
    Value:
      Fn::GetAtt:
        - BrowserWorkerSGE9CD062C
        - GroupId
    Export:
      Name: HuntazeEcsSecurityGroup
  KmsKeyArn:
    Description: KMS Key ARN for encryption
    Value:
      Fn::GetAtt:
        - HuntazeKmsKeyDAB810E1
        - Arn
    Export:
      Name: HuntazeKmsKeyArn
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
